# pycookie

./: LICENSE  README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pycookie.html  search.html  searchindex.js  static.html
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pycookie.doctree  static.doctree
docs/_modules/: index.html
docs/_modules/pycookie/: configs.html  main.html
docs/_sources/: index.rst.txt  modules.rst.txt  pycookie.rst.txt
pycookie/: __init__.py  main.py  static.py
sphinx/: conf.py  modules.rst  pycookie.rst
sphinx.moved/: static.rst
src/pycookie/: __init__.py  configs.py  main.py
