[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycookie"
version = "0.0.3"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pycookie will help you handle cookies"
readme = "README.md"
license = "MIT"
keywords=[
    "cookies",
    "browser",
    "chrome",
    "firefox",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
    "browsercookie",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pycookie"
"Bug Tracker" = "https://github.com/veltzer/pycookie/issues"
"Documentation" = "https://veltzer.github.io/pycookie"
"Download" = "https://pypi.org/project/pycookie/"
"Repository" = "https://github.com/veltzer/pycookie"

[project.scripts]
pycookie = "pycookie.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pycookie"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pycookie/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
